--- a/css/demo.css
+++ b/css/demo.css
@@ -44,7 +44,9 @@ body .favrouitepage {
     margin-top: 10px;
 }
 
-
+.custom-file-upload.cu-third {
+    margin: 0;
+}
 .loader {
        border: 5px solid #f3f3f3;
     border-top: 5px solid #3498db;
@@ -142,19 +144,21 @@ li.no-fav {
 }
 
 
-.editaccountms .custom-file-upload img {
+.editaccountms .custom-file-upload {
     border-radius: 19px;
     border: 3px solid #1cbac6;
     box-shadow: 0px 11px 8px #000;
     height: 170px;
-    width: 100%;
+	overflow:hidden;
+	text-align: center;
 }
-.registermin .custom-file-upload img {
-    border-radius: 19px;
+.registermin .custom-file-upload {
+   border-radius: 19px;
     border: 3px solid #1cbac6;
     box-shadow: 0px 11px 8px #000;
     height: 170px;
-    width: 100%;
+	overflow:hidden;
+	text-align: center;
 }
 .voltar-text-bg{	background-image: url(../images/voltartext.png);
 	background-position: top center;
@@ -246,16 +250,19 @@ a:focus, a:hover {
 }
 
 .custom-file-upload {
-    display: block;
+   display: block;
     width: auto;
     font-size: 16px;
     margin-top: 0px;
     float: left;
-    width: 33%;
-	padding-right:20px;
+    width: 31%;
+    margin-right: 20px;
+}
+.uploadfilemain .custom-file-upload:last-child {
+    margin: 0px;
 }
 
-.custom-file-upload img{ cursor:pointer;}
+.custom-file-upload img{ cursor:pointer; height:100%; width:auto; display:inline-block; }
 .custom-file-upload label {
   display: block;
   margin-bottom: 5px;
@@ -1264,7 +1271,10 @@ ul.bankof-ul span {  float: right;}
 }
 }
 @media only screen and (max-width:600px) {
-	
+.editaccountms .custom-file-upload {
+    height: 144px;
+}	
+.custom-file-upload{ margin-right:10px;} 		
 .bankstars.whatsapp-sect .page-heading .head-line {    height: 125px;     width: 354px;}
 .innerpage .whatsapp-sect .head-line span {       padding-left: 45px;   padding-top: 0; font-size: 40px; margin-top: 27px;}
 .whatsapp-sect label {    font-size: 24px;    padding-right: 3px;    margin-right: 15px;    width: 44%; border-right:1px solid #a8f39d; line-height: 22px;}
@@ -1328,6 +1338,7 @@ ul.bankof-ul span {  float: right;}
 }
 
 @media only screen and (max-width:585px) {
+
 .loader {
     left: 44%;
 }	
@@ -1371,6 +1382,7 @@ ul.bankof-ul span {  float: right;}
 .loginpage .page-heading .head-line span {    font-size: 50px; margin-top: 0px;}
 }
  @media only screen and (min-width:500px) and (max-width: 570px) {
+
 body .thnkyous .page-heading .head-line {
     padding: 28px 0px 0px 0px;
     height: 176px;
@@ -1489,11 +1501,11 @@ ul.bankof-ul span {  float: right;}
     padding: 1px;
 }
 	 
-.editaccountms .custom-file-upload img {
+.editaccountms .custom-file-upload {
     border-radius: 10px;
     height: 100px;
 }
-.registermin .custom-file-upload img {
+.registermin .custom-file-upload {
     border-radius: 10px;
     height: 100px;
 }	 
@@ -1553,7 +1565,6 @@ body .modal-dialog.frgtpwd {
     border-radius: 7px;
     border: 2px solid #1cbac6;
 }
-.custom-file-upload{    padding: 0px 3px;}
 	 
 
 .voltr-btn span {  padding-top: 44px;   padding-left: 29px;   font-size: 22px;}
