--- a/css/demo.css
+++ b/css/demo.css
@@ -418,7 +418,9 @@ a:focus, a:hover {
     padding: 0px 5px;
     vertical-align: top;
     line-height: 51px;
-	text-align:left;
+	text-align:right;
+	width: 13%;
+	    padding-left: 0px;
 }
 .r-top-only .rank img {
     margin-left: 6px;
@@ -1370,7 +1372,7 @@ ul.bankof-ul span {  float: right;}
 	
 .ranking-top-div {    border-radius: 12px; text-align: center; margin-top: 9px; }
 .trophy { left: -12px; top: 10px; width: 50px;/* margin-right: 10px; */}
-.ranking-top-div .rank {   font-size: 24px;  margin-top: 0; padding: 0px 5px; line-height: 28px;  text-align: left;}
+.ranking-top-div .rank {   font-size: 24px;  margin-top: 0; padding: 0px 5px; line-height: 28px;  text-align: right; padding-left: 0px;}
 .ranking-person {   width: 23%;}
 .rank-title {   font-size: 17px; padding-left: 10px; padding-top: 0px;text-align: left;}
 .rank-title img {      width: 24px;
@@ -1616,6 +1618,9 @@ ul.bankof-ul span {  float: right;}
 
 
 @media only screen and (min-width:320px) and (max-width: 399px) {
+.ranking-top-div .rank {
+    font-size: 19px;
+}	
 .bankstars.whatsapp-sect .page-heading .head-line {    height: 79px;     width: 228px;}
 body .innerpage .whatsapp-sect .page-heading .head-line span{          padding-left: 38px; padding-top: 0; font-size: 24px; margin-top: 20px; }
 .whatsapp-sect label {    font-size: 14px;    padding-right: 3px;    margin-right: 6px;    width: 40%; border-right:1px solid #a8f39d; line-height: 16px;}
@@ -1669,6 +1674,12 @@ ul.bankof-ul span {  float: right;}
 }
 
 @media only screen and (min-width:320px) and (max-width: 360px) {
+.rank-title {
+    font-size: 16px;
+}
+.ranking-top-div .rank {
+    font-size: 18px;
+}		
 .username {
 	font-size: 12px;
 }	
